--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="freeCodeCamp Accessibility Quiz practice project"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
     />
-    <title>Accessibility Quiz</title>
+    <link rel="icon" href="https://www.yabibal.com/static/media/logo-2.ef7068f91b29359d6dfb.png" />
+    <title>simple portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -36,7 +37,7 @@
           />
         </a>
       </span>
-      <h1 class="title">Creative Web Developer</h1>
+      <h1 id="heading" class="title">Creative Web Developer</h1>
       <nav>
         <ul>
           <li><a href="#about" accesskey="i">about</a></li>
